examples/test/testpolicy9626.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9626
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key5: value6
      key45: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value36
          key17: value17
          key41: value4
      podSelector:
        matchLabels:
          key47: value22
          key45: value46
